[project]
name = "aukpy"
version = "1.0.0"
authors = [
  { name="Vincent Luczkow", email="vincent.luczkow@gmail.com" },
]
description = "Reimplementation of auk in Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy==1.23.1",
    "pandas==1.4.3"
]

[project.optional-dependencies]
tests = [
    "black==22.6.0",
    "pytest==7.1.2",
    "mypy==0.971",
    "pandas-stubs==1.4.3.220807"
]
docs = [
    "Sphinx==5.1.1",
    "sphinx_rtd_theme==1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/vluzko/aukpy"
"Bug Tracker" = "https://github.com/vluzko/aukpy/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
